<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity"
    android:padding="16dp"
    android:background="@drawable/gradiant_animation"
    >
    <ImageView
        android:id="@+id/logoutImg"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_logout"/>
    <TextView
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutImg"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginTop="-15dp"
        android:text="Logout"
        android:textColor="@color/white"
        tools:ignore="HardcodedText" />

    <RelativeLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome_text"
            android:textColor="@color/white_gray"
            android:textSize="56sp" />

        <com.airbnb.lottie.LottieAnimationView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/welcome_textView"
            android:layout_marginBottom="22dp"
            android:layout_toEndOf="@+id/welcome_textView"
            app:lottie_autoPlay="true"

            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcome4" />


        <TextView
            android:id="@+id/user_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_textView"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/poppins"
            android:text="User_name"
            android:textColor="@color/white_gray"
            android:textSize="36sp"
            tools:ignore="HardcodedText" />


        <com.airbnb.lottie.LottieAnimationView

            android:id="@+id/welcome_animation"
            android:layout_width="320dp"
            android:layout_height="250dp"
            android:layout_below="@id/user_textView"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcome2"
            tools:ignore="HardcodedText" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_animation"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/app_information"
            android:textColor="@color/white_gray"
            android:paddingStart="16dp"
            android:textSize="24sp" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/relative_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout1"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        android:weightSum="6">


        <EditText
            android:id="@+id/group_key_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@drawable/edit_text_border"
            android:hint="@string/group_key_hint_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white"
            android:textColorHint="#AB959595"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/to_send_message_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/send_button_bg"
            android:contentDescription="button to your group"
            android:onClick="toMessageSend"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_send"
            tools:ignore="HardcodedText" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animate"
            android:visibility="gone"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:contentDescription="button to your group"
            android:padding="6dp"
            app:lottie_rawRes="@raw/loading6"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout1"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have key?"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />
        <TextView
            android:onClick="toCreateKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Make one!"
            tools:ignore="HardcodedText,UsingOnClickInXml"
            android:textColor="#AE4156"
            android:textSize="16sp"/>

    </LinearLayout>


</RelativeLayout>